Correção master.xhtml

--- a/WebContent/paginas/Profissional.xhtml
+++ b/WebContent/paginas/Profissional.xhtml
@@ -55,7 +55,7 @@
 						<p:inputText style="width:300px;"
 							value="#{profissionalBean.profissional.atuacaoEspecializacao}" />
 
-						<p:outputLabel value="Contrato Temporario:" />
+						<p:outputLabel value="Contrato CLT:" />
 						<p:selectOneButton id="idSelectContratoTemp"
 							value="#{profissionalBean.profissional.contratoTemporario}">
 							<f:selectItem itemLabel="Sim" itemValue="S" />
