--- a/WebContent/paginas/profissional/Profissional.xhtml
+++ b/WebContent/paginas/profissional/Profissional.xhtml
@@ -120,7 +120,7 @@
 								itemLabel="#{estado.uf}" itemValue="#{estado}" />
 							<p:ajax event="change"
 								listener="#{profissionalBean.carregarCidadesPorEstado}"
-								update="idCidades" global="false" />
+								update="idCidades" />
 						</p:selectOneMenu>
 
 						<p:outputLabel for="idCidades" value="Cidade:" />
