--- a/WebContent/paginas/proposta/ConsultarProposta.xhtml
+++ b/WebContent/paginas/proposta/ConsultarProposta.xhtml
@@ -10,18 +10,14 @@
 <ui:composition template="/templates/master.xhtml">
 
 	<f:metadata>
-		<!-- 		<f:event listener="#{profissionalBean.carregarTodosProfissionais()}" -->
-		<!-- 			type="preRenderView" /> -->
-
-		<o:viewParam name="profissional"
-			value="#{profissionalBean.profissional}" />
+		<o:viewParam name="proposta" value="#{propostaBean.proposta}" />
 
 	</f:metadata>
 
 	<ui:define name="corpo">
 		<p:panel id="idPanelProfissional" style="border: none;">
 
-			<h4 style="margin-top: 0" align="left">Consultar Profissionais</h4>
+			<h4 style="margin-top: 0" align="left">Consultar Propostas</h4>
 			<p:separator />
 
 			<p:messages id="messagesConsulta" showDetail="true" autoUpdate="true"
@@ -31,61 +27,76 @@
 			<p:toolbar style="margin-top: 20px">
 				<p:toolbarGroup>
 					<p:commandButton id="idBtPesquisar" value="Pesquisar"
-						action="#{profissionalBean.filtrarProfissionais}" update="tableProfissionais"
+						action="#{propostaBean.filtrarPropostas()}" update="tablePropostas"
 						 />
 				</p:toolbarGroup>
 			</p:toolbar>
 
-			<p:panelGrid columns="2" id="painel"
-				style="width: 100%; margin-top: 20px" columnClasses="rotulo, campo">
-				<p:outputLabel value="RG:" for="idRg" />
-				<p:inputMask mask="99999999-99" id="idRg" size="20"
-					value="#{profissionalBean.filtroRg}" />
+			<p:panelGrid columns="2" id="painel" style="width: 100%; margin-top: 20px" columnClasses="rotulo, campo">
+				
+				<p:outputLabel value="Cliente:" for="cliente"/>
+				<p:inputText id="cliente" value="#{propostaBean.filtroCliente}" size="40"/>
+			
+				<p:outputLabel value="Nº Proposta:" for="nrProposta" />
+				<p:inputText id="nrProposta" size="20" value="#{propostaBean.filtroNumeroProposta}" />
 
-				<p:outputLabel value="CPF:" />
-				<p:inputMask mask="999.999.999-99"
-					value="#{profissionalBean.filtroCpf}" />
+				
 			</p:panelGrid>
 			
 			<br></br>
 
-			<p:dataTable id="tableProfissionais" var="profissional" lazy="true"
-				value="#{profissionalBean.profissionais}"
-				emptyMessage="Nenhum profissional cadastrado" paginator="true"
+			<p:dataTable id="tablePropostas" var="proposta" lazy="true"
+				value="#{propostaBean.propostas}"
+				emptyMessage="Nenhuma proprosta cadastrada" paginator="true"
 				rows="10" rowsPerPageTemplate="5,10,15" paginatorPosition="bottom"
 				paginatorTemplate="{RowsPerPageDropdown} {FirstPageLink} {PreviousPageLink} {CurrentPageReport} {NextPageLink} {LastPageLink}"
-				selectionMode="single" selection="#{profissionalBean.profissional}"
-				rowKey="#{profissional.id}">
+				selectionMode="single" selection="#{propostaBean.proposta}"
+				rowKey="#{proposta.id}">
 
-				<p:column headerText="Nome">
-					<h:outputText value="#{profissional.nome}" />
+				<p:column headerText="Nº Proposta">
+					<h:outputText value="#{proposta.numeroProposta}" />
 				</p:column>
-				<p:column headerText="CPF">
-					<h:outputText value="#{profissional.cpf}" />
+				<p:column headerText="Nome do Projeto">
+					<h:outputText value="#{proposta.numeroProposta}" />
 				</p:column>
-				<p:column headerText="RG">
-					<h:outputText value="#{profissional.rg}" />
+				<p:column headerText="Cliente">
+					<h:outputText value="#{proposta.cliente}" />
 				</p:column>
-				<p:column headerText="Data de Nascimento">
-					<h:outputText value="#{profissional.dataNascimento}" />
+				<p:column headerText="Status">
+					<h:outputText value="#{proposta.status}" />
+				</p:column>
+				<p:column headerText="Data de Inclusão">
+					<h:outputText value="#{proposta.dataInclusao}" >
+						<f:convertDateTime pattern="dd/MM/yyyy" />
+					</h:outputText>
+				</p:column>
+				<p:column headerText="Data de Contratação">
+					<h:outputText value="#{proposta.dataContratacao}" >
+						<f:convertDateTime pattern="dd/MM/yyyy" />
+					</h:outputText>
+				</p:column>
+				<p:column headerText="Valor">
+					<h:outputText value="#{proposta.valorTotalDaProposta}">
+						<f:convertNumber currencySymbol="R$" type="currency"/>
+					</h:outputText>
 				</p:column>
 				<f:facet name="footer">
 					<div align="left">
-						<p:commandButton process="tableProfissionais"
+						<p:commandButton process="tablePropostas"
 							icon="fa fa-fw fa-eye" value="Visualizar"
-							action="#{profissionalBean.visualizarProfissional()}" />
-						<p:commandButton process="tableProfissionais"
+							action="#{propostaBean.visualizarProposta()}" />
+						<p:commandButton process="tablePropostas"
 							icon="fa fa-fw fa-edit" value="Editar"
-							action="#{profissionalBean.redirectEditProfissional()}"
+							action="#{propostaBean.redirectEditProposta()}"
 							ajax="false" />
-						<p:commandButton process="tableProfissionais"
+						<p:commandButton process="tablePropostas"
 							icon="fa fa-fw fa-remove" value="Excluir"
-							action="#{profissionalBean.excluirProfissional()}" ajax="false" />
+							action="#{propostaBean.excluirProposta()}" ajax="false" />
 					</div>
 				</f:facet>
 			</p:dataTable>
 
-			<p:blockUI block="tableProfissionais" trigger="idBtPesquisar" >
+			<p:blockUI block="tablePropostas" trigger="idBtPesquisar" >
 				<p:graphicImage name="images/ajaxloadingbar.gif" />
 			</p:blockUI>
 			
