--- a/WebContent/paginas/proposta/ConsultarProposta.xhtml
+++ b/WebContent/paginas/proposta/ConsultarProposta.xhtml
@@ -15,7 +15,7 @@
 	</f:metadata>
 
 	<ui:define name="corpo">
-		<p:panel id="idPanelProfissional" style="border: none;">
+		<p:panel id="idPanelProposta" style="border: none;">
 
 			<h4 style="margin-top: 0" align="left">Consultar Propostas</h4>
 			<p:separator />
@@ -27,22 +27,53 @@
 			<p:toolbar style="margin-top: 20px">
 				<p:toolbarGroup>
 					<p:commandButton id="idBtPesquisar" value="Pesquisar"
-						action="#{propostaBean.filtrarPropostas()}" update="tablePropostas"
-						 />
+						action="#{propostaBean.filtrarPropostas()}"
+						update="tablePropostas" />
 				</p:toolbarGroup>
 			</p:toolbar>
 
-			<p:panelGrid columns="2" id="painel" style="width: 100%; margin-top: 20px" columnClasses="rotulo, campo">
-				
-				<p:outputLabel value="Cliente:" for="cliente"/>
-				<p:inputText id="cliente" value="#{propostaBean.filtroCliente}" size="40"/>
-			
-				<p:outputLabel value="Nº Proposta:" for="nrProposta" />
-				<p:inputText id="nrProposta" size="20" value="#{propostaBean.filtroNumeroProposta}" />
+			<h:panelGrid columns="1" id="painel">
 
-				
-			</p:panelGrid>
-			
+				<div class="ui-g">
+					<div class="ui-g-3">
+						<h:panelGrid columns="1" cellspacing="5">
+							<p:outputLabel value="Período:">
+								<p:calendar pattern="dd/MM/yyyy" mask="true" locale="pt"
+									title="Data Inicial" id="dtInicial"
+									value="#{propostaBean.filtroDataInicial}">
+									<f:convertDateTime pattern="dd/MM/yyyy" />
+								</p:calendar>
+								<p:outputLabel value=" Á " />
+								<p:calendar pattern="dd/MM/yyyy" mask="true" locale="pt"
+									title="Data Final" id="dtFinal"
+									value="#{propostaBean.filtroDataFinal}">
+									<f:convertDateTime pattern="dd/MM/yyyy" />
+								</p:calendar>
+							</p:outputLabel>
+							<h:panelGrid columns="2">
+								<p:outputLabel value="Nº Proposta:" for="nrProposta" />
+								<p:inputText id="nrProposta"
+									value="#{propostaBean.filtroNumeroProposta}" />
+							</h:panelGrid>
+							<h:panelGrid columns="2">
+								<p:outputLabel value="Cliente:" for="cliente" />
+								<p:inputText id="cliente" value="#{propostaBean.filtroCliente}" />
+							</h:panelGrid>
+							<h:panelGrid columns="2">
+							</h:panelGrid>
+							<h:panelGrid columns="2">
+								<p:outputLabel value="Status:" />
+								<p:selectOneButton id="status"
+									value="#{propostaBean.filtroStatus}">
+									<f:selectItem itemLabel="Aprovada" itemValue="A" />
+									<f:selectItem itemLabel="Cancelada" itemValue="C" />
+								</p:selectOneButton>
+							</h:panelGrid>
+						</h:panelGrid>
+					</div>
+				</div>
+			</h:panelGrid>
+
 			<br></br>
 
 			<p:dataTable id="tablePropostas" var="proposta" lazy="true"
@@ -66,40 +97,41 @@
 					<h:outputText value="#{proposta.status}" />
 				</p:column>
 				<p:column headerText="Data de Inclusão">
-					<h:outputText value="#{proposta.dataInclusao}" >
+					<h:outputText value="#{proposta.dataInclusao}">
 						<f:convertDateTime pattern="dd/MM/yyyy" />
 					</h:outputText>
 				</p:column>
 				<p:column headerText="Data de Contratação">
-					<h:outputText value="#{proposta.dataContratacao}" >
+					<h:outputText value="#{proposta.dataContratacao}">
 						<f:convertDateTime pattern="dd/MM/yyyy" />
 					</h:outputText>
 				</p:column>
 				<p:column headerText="Valor">
 					<h:outputText value="#{proposta.valorTotalDaProposta}">
-						<f:convertNumber currencySymbol="R$" type="currency"/>
+						<f:convertNumber currencySymbol="R$" type="currency" />
 					</h:outputText>
 				</p:column>
 				<f:facet name="footer">
 					<div align="left">
-						<p:commandButton process="tablePropostas"
-							icon="fa fa-fw fa-eye" value="Visualizar"
-							action="#{propostaBean.visualizarProposta()}" />
-						<p:commandButton process="tablePropostas"
-							icon="fa fa-fw fa-edit" value="Editar"
-							action="#{propostaBean.redirectEditProposta()}"
+						<p:commandButton process="tablePropostas" icon="fa fa-fw fa-eye"
+							value="Visualizar" action="#{propostaBean.visualizarProposta()}" />
+						<p:commandButton process="tablePropostas" icon="fa fa-fw fa-edit"
+							value="Editar" action="#{propostaBean.redirectEditProposta()}"
 							ajax="false" />
 						<p:commandButton process="tablePropostas"
 							icon="fa fa-fw fa-remove" value="Excluir"
 							action="#{propostaBean.excluirProposta()}" ajax="false" />
+						<p:commandButton process="tablePropostas"
+							icon="fa fa-fw fa-history" value="Histórico"
+							action="#{propostaBean.consultarHistoricoProposta()}" ajax="false" />
 					</div>
 				</f:facet>
 			</p:dataTable>
 
-			<p:blockUI block="tablePropostas" trigger="idBtPesquisar" >
+			<p:blockUI block="tablePropostas" trigger="idBtPesquisar">
 				<p:graphicImage name="images/ajaxloadingbar.gif" />
 			</p:blockUI>
-			
+
 		</p:panel>
 	</ui:define>
 </ui:composition>
