Correção de inputs obrigatórios e resetInputs

--- a/WebContent/paginas/proposta/ConsultarProposta.xhtml
+++ b/WebContent/paginas/proposta/ConsultarProposta.xhtml
@@ -88,7 +88,7 @@
 					<h:outputText value="#{proposta.numeroProposta}" />
 				</p:column>
 				<p:column headerText="Nome do Projeto">
-					<h:outputText value="#{proposta.numeroProposta}" />
+					<h:outputText value="#{proposta.nomeProjeto}" />
 				</p:column>
 				<p:column headerText="Cliente">
 					<h:outputText value="#{proposta.cliente}" />
