Conclusão da primeira parte do modulo contratos (Arquitetura)

--- a/WebContent/paginas/proposta/Proposta.xhtml
+++ b/WebContent/paginas/proposta/Proposta.xhtml
@@ -57,7 +57,7 @@
 							value="#{propostaBean.proposta.dataEnvioAoCliente}">
 							<f:convertDateTime pattern="dd/MM/yyyy" />
 						</p:calendar>
-						<p:outputLabel value="#{propostaBean.proposta.dataInclusao}"
+						<p:outputLabel value="#{propostaBean.proposta.dataEnvioAoCliente}"
 							rendered="#{propostaBean.viewProposta}">
 							<f:convertDateTime pattern="dd/MM/yyyy" />
 						</p:outputLabel>
