--- a/WebContent/paginas/login.xhtml
+++ b/WebContent/paginas/login.xhtml
@@ -56,7 +56,7 @@
 							<br />
 							<div>
 								<h1>
-									<i class="fa fa-paw" style="font-size: 26px;"></i>#{msg.sis_agrega}
+									<i style="font-size: 26px;"></i>#{msg.sis_agrega}
 								</h1>
 
 								<p>#{msg.tit_rodapeLogin}</p>
